--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -17,6 +17,9 @@ buildscript {
         version_play_services_location = "17.0.0"
         version_room = "2.5.1"
         version_timber = "5.0.1"
+        version_koin = '3.4.2'
+        version_glide = "4.11.0"
+
     }
 
     repositories {
